*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -15,3 +15,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 ----
 
 [[Category:Lokótá]]
+
+[[de:Sprache]]
+[[fr:langue]]
+[[en:language]]
