*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -2,6 +2,8 @@
 [[Image:Afro-Asiatic.png|thumb]] 
 Ici manque un article général sur les langues
 
+voir aussi [[ndingá (monɔkɔ ya mboka)]]
+
 
 
 ----
