*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -7,6 +7,16 @@ voir aussi [[ndingá (monɔkɔ ya mboka)]]
 
 
 ----
+
+Comment améliorer un article sur une langue?
+- classification linguistique
+- où est-ce qu'on la parle?
+- spécialités grammaticales
+- histoire linguistique
+- sons
+- bibliographie
+>> voir come exemple: [[en:lingala]]
+
 Cette liste temporaire vous permet l'accès aux articles suivants pour les créer ou les améliorer. Elle sera effacé le moment donné.
 
 * [[lingála]] 
