*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -9,7 +9,17 @@
 
 
 
+----
+Comment améliorer un article sur une langue?
+* classification linguistique
+* où est-ce qu'on la parle?
+* spécialités grammaticales
+* histoire linguistique
+* sons
+* bibliographie
 
+>> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
+----
 
 [[Category:Lokótá]]
 
