--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -9,5 +9,18 @@
 * Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
 
 
+
+
+----
+Comment améliorer un article sur une langue?
+* classification linguistique
+* où est-ce qu'on la parle?
+* spécialités grammaticales
+* histoire linguistique
+* sons
+* bibliographie
+
+>> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
+----
                                                                                  
 [[Category:Lokótá]]
