*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -15,7 +15,8 @@ Comment améliorer un article sur une langue?
 * sons
 * bibliographie
 
->> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
+>> voir come exemple en anglais: http://en.wikipedia.org/wiki/Lingala_language 
+>> voir come exemple en alémanique: http://als.wikipedia.org/wiki/Lingala
 ----
 Cette liste temporaire vous permet l'accès aux articles suivants pour les créer ou les améliorer. Elle sera effacé le moment donné.
 
