*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -26,5 +26,6 @@ Comment améliorer un article sur une langue?
 [[de:Lingala]]
 [[als:Lingala]]
 [[en:Lingala language]]
+[[es:lingala]]
 [[fr:Lingala]]
 [[nl:Lingala]]
