/* “Makamisiya” «Kongó ya sika» */  mibu -> mobu

--- a/Kongó-Kinshasa.mw
+++ b/Kongó-Kinshasa.mw
@@ -62,12 +62,12 @@ Voir aussi [[Kongó (ntangó ya banókó)]]
 Tango ekolo [[Belgica]] ezolakisa na mobu koto na kama libwa na tuku mitano na mwambe misala mya banoko na emoneli ya [[Bruxelles]], na ekolo Kongó, posa ya dipanda ekwei na mboka. 
 
 === “Makamisiya” «Kongó ya sika» ===
-Na kati ya mibu koto na kama libwa na tuku mitano, nzembo ''Kongó Ya Sika'' etangi makanisi ya bana Kongó.
+Na kati ya mobu koto na kama libwa na tuku mitano, nzembo ''Kongó Ya Sika'' etangi makanisi ya bana Kongó.
 Ngulupa ya sika ya bato ya ekolo ebandi komata: «bakoli», bato baye bomoy lokola banoko, kasi lolenge moko te na bato ya mboka. Bandako mpe bilya bya bango, totangi bakiti, bavelo mpe baladyo, elakisi esika na bango na mboka. 
 Na mobu koto na kama libwa na tuku mitano na motoba, misusu ô kati na bango bakòmí na buku ''conscience africaine'', [[makanisi]] etali bokoli bwa kokamba ekolo, bokoli bwa kozwa biloko mpe bokoli bwa bana ya Kongó pona kozwa dipanda. 
 
 Wâna ebandeli ya lisanga lya bato na kanda mpona kosenga na Belgica dipanda ya ekolo Kongó. Dipanda esengami mpe na mondule: Masanga ya bayembi [[African jazz]] mpe [[OK jazz]] balandi tango ya mbongwana ena na banzembo bya bango etondi makambo ma bokambi ekolo. 
-Nzembo [[Indépendance Cha Cha]] ekomi nzembo ekoyemba bana ya Africa nyonso baye babengani ba [[Belges]]. 
+Nzembo [[Indépendance Cha Cha]] ekomi nzembo ekoyemba bana ya Africa nyonso baye babengani ba [[Belges]].
 
 === Dipanda ===
 Mokolo ya tuku misato ya sanza ya motoba. Ekolo Kongó ekobina, ekosepela dipanda. Kasi likambo linene likoya. 
