Bakótá ya ekólo

--- a/Kongó-Kinshasa.mw
+++ b/Kongó-Kinshasa.mw
@@ -15,7 +15,7 @@
 |-----
 | [[Lokótá officielle]] || [[lifalasɛ́]]
 |-----
-| Bakótá na mbóka
+| Bakótá ya ekólo
 | [[Lingála]], [[Kiswahili]],<br />[[Tshiluba]], [[Kikongo]]
 |-----
 | [[Mboka-mokonzi]] || [[Kinshasa]]
