--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,12 +1,12 @@
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
-'''Tshiluba''' (tchiluba,  ciluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
+'''Ciluba''' (tchiluba,  Tshiluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
 
 
 
 == Liens ==
-* Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
+* Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
 
 
 
