*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -5,6 +5,9 @@
 
 
 
+== (liens) ==
+http://www.congopage.com/phpBB/viewforum.php?f=33
+
 ----
 Comment améliorer un article sur une langue?
 * classification linguistique
