--- a/Lingála.mw
+++ b/Lingála.mw
@@ -9,6 +9,9 @@
 
 
 
+== (liens) ==
+http://www.com-nature.com/phorum/list.php3?f=14
+http://www.congopage.com/phpBB/viewforum.php?f=20
 ----
 Comment améliorer un article sur une langue?
 * classification linguistique
