--- a/Falansé.mw
+++ b/Falansé.mw
@@ -1,4 +1,4 @@
-[[image:Francais-World.png]]
+[[image:Francais-World.png|thumb|right|description]]
 
 '''Lifalasɛ́''' ezali [[lokótá]] na bato ya [[France]].
 
