*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,5 +1,7 @@
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
+{{ndambo}}
+
 '''Ciluba''' (tchiluba,  Tshiluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
 
