--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -3,6 +3,8 @@
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
 
+{{ndambo}}
+
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''ekopekisa''' ngenge ya sida. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
 Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpe ezwa [[bokɔnɔ]] boye bozwamaka ya mwasi na mobali. Ebateli ekopekisa mpe mwasi azwa zemi ntango alingi te.
