--- a/Ekopekisa_(Ndenge).mw
+++ b/Ekopekisa_(Ndenge).mw
@@ -3,6 +3,8 @@
 [[category:sida]]
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''[[ekopekisa]]''' ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
+{{ndambo}}
+
 Ndenge ya kolata mpe kosalela
 
 * Fungola malamu ekanga. Keba, manzaka, mino to eloko inso epasola yango te.
