--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -1,4 +1,5 @@
 [[category:lisangá]]
+{{ndambo}}
 
 '''Demokrasi''' liuti na maloba mabale ma [[lokótá la bagrec]]i : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o [[bana mboka]] mpe mpo ya bolamu ya bango.
 
