--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -1,3 +1,5 @@
+{{ndambo}}
+
 [[Image:Kikongo-m.jpg|thumb|Description manque.]] 
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
