--- a/Kapitalismɛ.mw
+++ b/Kapitalismɛ.mw
@@ -1,3 +1,3 @@
 [[category:lisangá]]
-
+{{ndambo}}
 [[Politiki]] ya '''kapitalismɛ''' elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
