--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -1,3 +1,5 @@
+{{ndambo}}
+
 [[Image:Swahili-pn.jpg|thumb|Description]]
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
