banókó -> banɔ́kɔ́

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -1,6 +1,6 @@
 [[Image:CSKatangaTCongoBel1950a.jpg|thumb|right|Kongó ya Belgica, 1950]]
 
-Voir aussi [[Ntangó ya banókó]]
+Voir aussi [[Ntangó ya banɔ́kɔ́]]
 
 Wuta mobu koto na kama mwambe na tuku mwambe na minei tii mobu koto na kama mwambe na tuku mwambe na mitano, Conférence de Berlin esangisi bana ya [[Europa]], ya [[America]] mpe ya [[Turkia]] mpona kokamba mibeko mikofungola nzela ya Afrika. 
 Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale ya [[Kongó-Kinshasa|Kongó]] eye ekambami na moleki nzela [[Stanley]], ezali mabele mwa ye mpe na lisanga lya ye. 
