--- a/Lingála.mw
+++ b/Lingála.mw
@@ -2,7 +2,7 @@
 [[Image:LanguageMap-Lingala-Larger Location.png|thumb|right|description]]
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
-
+{{ndámbo}}
 '''Lingála''' ezali [[lokótá]] na bato na [[Kongo]].
 
 
