+{{ndómba}}, tshiluba -> ciluba

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -1,5 +1,7 @@
 [[Image:Spraakfamiliar.png|thumb]] 
 [[Image:Afro-Asiatic.png|thumb]] 
+{{ndomba}}
+
 Ici manque un article général sur les langues
 
 voir aussi [[ndingá (monɔkɔ ya mboka)]]
@@ -23,7 +25,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[lingála]] 
 * [[kikongo]] 
 * [[kiswahili]]
-* [[tshiluba]]
+* [[ciluba]]
 
 ----
 
