--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -1,2 +1,3 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Mobutu.jpg|thumb|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
+{{ndómba}}
