--- a/Nkɔ́li.mw
+++ b/Nkɔ́li.mw
@@ -1,3 +1,5 @@
+{{ndámbo}}
+
 [[image:Krokodile.png|thumb|180px|right|Nkoli (crocodilus niloticus); in: Meyers Großes Konversationslexikon, 1905-09]]
 '''Nkoli''', '''ngandó''', ezali [[nyama]] ya [[ebale]].
 
