--- a/Nkɔ́si.mw
+++ b/Nkɔ́si.mw
@@ -1,3 +1,5 @@
+{{ndámbo}}
+
 [[image:Loewe-painting.jpg|thumb|180px|right|Kenia; in: Brehms Tierleben, 1927]]
 [[image:Lightmatter_lioness.jpg|thumb|180px|right|Nkosi]]
 
