--- a/Politíki.mw
+++ b/Politíki.mw
@@ -1,3 +1,4 @@
+{{ndámbo}}
 [[category:lisangá]]
 
 '''Politiki''' ezalí bwányá ya koyángela [[likambo|makambo]] ma ekolo lokóla mibeko mizalí kotinda; kobɔngisa [[bomɔi]] ya [[moto|bato]], bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
