--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -1,4 +1,59 @@
 {{Ndámbo}}
 
-[[als:Liste unabhängiger Staaten]][[bg:Списък на страните]] [[w:fr:Liste des pays du monde]]
+=== A ===
+[[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Libîya]] - [[Angóla]]
+
+=== B ===
+[[Bê Afríka]] (Santrafríka) - [[Bɛ́ljika]] - [[Bénin]] - [[Botswana]] - [[Burkina Faso]] - [[Burundi]]
+
+=== C ===
+[[Côte d'Ivoire]]
+
+=== D ===
+[[Djibouti]]
+
+=== F ===
+[[Falansia]]
+
+=== G ===
+[[Gabon]] - [[Gambia]] - [[Ghana]] - [[Gine]] - [[Gine-Bisau]] - [[Gine-Ekwatorial]] (Mambénga)
+
+=== H ===
+[[Holanda]]
+
+=== I ===
+[[India]] - [[Ingɛlɛ́tɛlɛ]]
+
+=== K ===
+[[Kamerun]] - [[Kenya]] - [[Kɔ́ngɔ-Brazzaville]] (Congo-Brazzaville) - [[Kɔ́ngɔ-Kinshasa]]
+
+=== L ===
+[[Liberia]] - [[Luksamburg]]
+
+=== M ===
+[[Malawi]] - [[Mali]] - [[Moritani]] (Mauritanie) - [[Mozambiki]]
+
+=== N ===
+[[Namibia]] - [[Niger]] - [[Nijeria]]
+
+=== P ===
+[[Purtugal]]
+
+=== R ===
+[[Rwanda]]
+
+=== S ===
+[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seychelles]] - [[Sierra Leone]] - [[Somalie]] - [[Swaziland]]
+
+=== T ===
+[[Tchad]] - [[Togo]] - [[Tunisia]]
+
+=== U ===
+[[Uganda]]
+
+=== Z ===
+[[Zambia]] - [[Zimbabwe]]
+
+
+[[als:Liste unabhängiger Staaten]][[bg:Списък на страните]] [[fr:Liste des pays du monde]]
 [[ca:Estat]] [[cy:Rhestr gwledydd y byd]] [[da:Verdens lande]] [[de:Liste unabhängiger Staaten]] [[el:Λίστα των Χωρών]] [[en:List of sovereign states]] [[eo:Landoj]] [[es:Países del mundo]] [[hi:देशों की सूची]] [[it:Paesi del Mondo]] [[ja:国の一覧]] [[ka:მსოფლიოს ქვეყნები]] [[la:Nationes Mundi]] [[lt:Šalių sąrašas]] [[mg:Lisitry ny firenena]] [[nl:Landen van de wereld]] [[pl:Państwa świata]] [[pt:Países]] [[ru:Алфавитный список стран]] [[sl:Države sveta]] [[sr:Списак држава]] [[sv:Alfabetisk lista över världens länder]] [[uk:Список країн]] [[vi:Danh sách các nước trên thế giới]] [[yi:רשימה פֿון לענדער פֿון װעלט]] [[zh:世界地理索引]]
