*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -1,6 +1,6 @@
 [[Image:Spraakfamiliar.png|thumb]] 
 [[Image:Afro-Asiatic.png|thumb]] 
-{{ndomba}}
+{{Ndambo}}
 
 Ici manque un article général sur les langues
 
