--- a/Falansé.mw
+++ b/Falansé.mw
@@ -1,6 +1,6 @@
 [[image:Francais-World.png|thumb|right|description]]
 
-'''Lifalasɛ́''' ezali [[lokótá]] na bato ya [[France]].
+'''Lifalansé''' ezali [[lokótá]] na bato ya [[Falansia]].
 
 [[Category:Lokótá]]
 
