*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -13,7 +13,7 @@
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
-| [[Langue officielle]] || [[Langue française|français]]
+| [[Langue officielle]] || [[français]]
 |-----
 | Langues nationales  
 | [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
@@ -25,11 +25,11 @@
 | [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
 | [[Liste des pays par superficie|Classé 12{{e}}]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
 |-----
-| [[Population]]<br />&nbsp;- ekokí ([[Mbúla]]) <br />&nbsp;- [[Densité de population|Densité]]
+| [[Bato]]<br />&nbsp;- motángo ([[Mbúla]]) <br />&nbsp;- [[Densité de population|Densité]]
 | [[Liste des pays par population|Classé 23{{e}}]]<br /> 55 225 478 habitants<br /> 24 hab./km²
 |-----
-| [[Indépendance]]<br />&nbsp;- Date
-| de la [[Belgique]]<br />[[30 juin]] [[1960]]
+| [[Bonsɔ́mí]]<br />&nbsp;- Date
+| ya [[Bɛ́ljika]]<br />[[30 juin]] [[1960]]
 |-----
 | [[Mfalánga]] || [[Franc Congolais]]
 |-----
