*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -13,9 +13,9 @@
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
-| [[Langue officielle]] || [[français]]
+| [[Lokóta officielle]] || [[lifalansé]]
 |-----
-| Langues nationales  
+| Nkótá nationales  
 | [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
 |-----
 | [[Mboka-mokonzi]] || [[Kinshasa]]
@@ -23,10 +23,10 @@
 | [[Kongo Demokratiki (Tata-mokonzi)|Tata-mokonzi]] || [[Joseph Kabila]]
 |-----
 | [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
-| [[Liste des pays par superficie|Classé 12{{e}}]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
+| [[Molɔngɔ́ ya bisé na etando|Classé 12]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
 |-----
 | [[Bato]]<br />&nbsp;- motángo ([[Mbúla]]) <br />&nbsp;- [[Densité de population|Densité]]
-| [[Liste des pays par population|Classé 23{{e}}]]<br /> 55 225 478 habitants<br /> 24 hab./km²
+| [[Molɔngɔ́ ya bisé na bato|Classé 23]]<br /> 55 225 478 bato<br /> 24 hab./km²
 |-----
 | [[Bonsɔ́mí]]<br />&nbsp;- Date
 | ya [[Bɛ́ljika]]<br />[[30 juin]] [[1960]]
@@ -47,9 +47,9 @@
 |}
 
 
-== Lakótá ==
+== Lokótá ==
 
-Na ekolo Kongo elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kɔ́ngɔ elobamí [[lokóta|nkótá]] kama mibale. Nyɔ́nsɔ wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
