cat:mboka -> bise

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -108,6 +108,6 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
-[[Category:Afrika]] [[Category:mbóka]]
+[[Category:Afrika]] [[Category:bisé]]
 
 [[de:Demokratische Republik Kongo]] [[en:Democratic Republic of the Congo]] [[es:República Democrática del Congo]] [[eo:Kongo Kinŝasa]] [[et:Kongo Demokraatlik Vabariik]] [[fr:République démocratique du Congo]] [[it:Repubblica Democratica del Congo]] [[nl:Democratische Republiek Congo]] [[pt:República Democrática do Congo]]
