+ [[lifalansé]], [[lingɛlɛ́sa]]

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -26,6 +26,8 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[kikongo]] 
 * [[kiswahili]]
 * [[ciluba]]
+* [[lifalansé]]
+* [[lingɛlɛ́sa]]
 
 ----
 
