--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -4,7 +4,7 @@
 [[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Libîya]] - [[Angóla]]
 
 === B ===
-[[Bê Afríka]] (Santrafríka) - [[Bɛ́ljika]] - [[Bénin]] - [[Botswana]] - [[Burkina Faso]] - [[Burundi]]
+[[Bê Afríka]] (Santrafríka) - [[Bɛ́lɛjika]] - [[Bénin]] - [[Botswana]] - [[Burkina Faso]] - [[Burundi]]
 
 === C ===
 [[Côte d'Ivoire]]
