*Empty MediaWiki Message*

--- a/Falansé.mw
+++ b/Falansé.mw
@@ -1,6 +1,6 @@
 [[image:Francais-World.png|thumb|right|description]]
 
-'''Lifalansé''' ezali [[lokótá]] na bato ya [[Falansia]]. Elobamí o na eténi ya [[Bɛ́ljika]], [[Swisi]], [[Québeki]] na [[Afríka]].
+'''Lifalansé''' ezali [[lokótá]] na bato ya [[Falansia]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Québeki]] na [[Afríka]].
 
 [[Category:Lokótá]]
 
