Drapeau -> Bɛndɛ́lɛ

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -6,7 +6,7 @@
 |-----
 | align="center" width="140px" | [[Image:Congo_democratic_flag_300.png|140px]]
 |-----
-| align="center" width="140px" | ([[Drapeau du Congo|Détails]])
+| align="center" width="140px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
 | align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Sans''</font>
