--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -19,3 +19,5 @@ Comment améliorer un article sur une langue?
 >> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
 ----
 [[Category:Lokótá]]
+
+[[de:Swahili (Sprache)]]
