*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,3 +1,1 @@
-[[fr:Image:Carte suisse2.png|thumb|310px|right|Carte de la Suisse]]
-
-[[fr:Image:Carte Suisse langue.png|thumb|300px|right|Les différentes langues de la Suisse]]
+[[Image:Carte suisse2.png|thumb|310px|right|Swisi]]
