--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -132,6 +132,7 @@ Makoki pe bonsomi yango ekoki, ata moke te, kozala esongo na masengi ya Lisanga 
 ==Eténi ya 30==
 Mobeko ata moko te ya Lisanga oyo ekoki kozala po na Leta, na lisanga ya bato, to na moto, likoki ya kosala likambo oyo ekonyata makoki pe bonsomi awa.
 
+[[bm:Hadamaden josiraw dantigɛkan]]
 [[cs:Všeobecná deklarace lidských práv]] 
 [[de:Allgemeine Erklärung der Menschenrechte]] 
 [[en:Universal Declaration of Human Rights]] 
