*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -13,7 +13,7 @@
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
-| [[Lokóta officielle]] || [[lifalansé]]
+| [[Lokóta ya Leta]] || [[lifalansé]]
 |-----
 | Nkótá nationales  
 | [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
