*Empty MediaWiki Message*

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -3,12 +3,12 @@
 
 [[Category:moto wa politiki (Kongo-Kinshasa)]]
 
-Ce tableau liste les chef d'État successifs de l'ancien Congo belge depuis son indépendance du [[Belgique|Royaume de Belgique]] le [[1 juillet|premier juillet]] [[1960]]. Les différents noms qu'a pu prendre le pays sont mentionnés.
+Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eyebanaki kala na nkombo ya "Congo Belge", wuta lipanda elongamaki na [[Belgique|Ekolo Belgiki]] na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
 
 {|border="2" cellpadding="2" cellspacing="2"
 !Nkombo
-!Début du mandat
-!Fin du mandat
+!Ebandeli-kimokonzi
+!Suka-kimokonzi
 !Parti
 !Elembo
 |-
