*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''Kongo Demokratiki'''</font>
+|+ <font size="+1">'''Ekolo Kongo Demokratiki'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -9,7 +9,7 @@
 | align="center" width="140px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
-| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Sans''</font>
+| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasia - Jistisi - Bosangani''</font>
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
@@ -20,7 +20,7 @@
 |-----
 | [[Mboka-mokonzi]] || [[Kinshasa]]
 |-----
-| [[Kongo Demokratiki (Tata-mokonzi)|Tata-mokonzi]] || [[Joseph Kabila]]
+| [[Kongo Demokratiki (Tata-mokonzi)|Mokambi-ekolo]] || [[Joseph Kabila]]
 |-----
 | [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
 | [[Molɔngɔ́ ya bisé na etando|Classé 12]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
