--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -110,5 +110,27 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 
 [[Category:Afrika]] [[Category:Bisé ya Afrika]] [[Category:Bisé]]
 
-[[de:Demokratische Republik Kongo]] [[en:Democratic Republic of the Congo]] [[es:República Democrática del Congo]] [[eo:Kongo Kinŝasa]] [[et:Kongo Demokraatlik Vabariik]] [[fr:République démocratique du Congo]] [[it:Repubblica Democratica del Congo]] [[nl:Democratische Republiek Congo]] [[pt:República Democrática do Congo]]
+[[bn:&#2453;&#2457;&#2509;&#2455;&#2507; (&#2460;&#2494;&#2479;&#2492;&#2494;&#2480;)]]
+[[da:Demokratiske Republik Congo]]
+[[de:Demokratische Republik Kongo]]
+[[en:Democratic Republic of the Congo]]
+[[es:República Democrática del Congo]]
+[[eo:Kongo Kin&#349;asa]]
+[[et:Kongo Demokraatlik Vabariik]] 
+[[fr:République démocratique du Congo]]
+[[it:Repubblica Democratica del Congo]]
+[[lt:Kongo Demokratin&#279; Respublika]]
+[[ln:Kongo-Kinshasa]]
+[[lv:Kongo DR]]
+[[ms:Republik Demokratik Congo]]
+[[nds:Demokraatsche Republiek Kongo]]
+[[nl:Democratische Republiek Congo]]
+[[ja:&#12467;&#12531;&#12468;&#27665;&#20027;&#20849;&#21644;&#22269;]]
+[[no:Kongo]]
+[[pl:Demokratyczna Republika Konga]]
+[[pt:República Democrática do Congo]]
+[[ru:&#1050;&#1086;&#1085;&#1075;&#1086;, &#1044;&#1077;&#1084;&#1086;&#1082;&#1088;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103; &#1056;&#1077;&#1089;&#1087;&#1091;&#1073;&#1083;&#1080;&#1082;&#1072;]]
+[[sl:Demokrati&#269;na republika Kongo]]
+[[sv:Demokratiska republiken Kongo]]
+[[zh-cn:&#21018;&#26524;&#27665;&#20027;&#20849;&#21644;&#22269;]]
 $
