*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -108,7 +108,197 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
-[[Category:Afrika]] [[Category:Bisé ya Afrika]] [[Category:Bisé]]
+== Histoire ==
+''Article détaillé : [[Histoire de la République démocratique du Congo]]''
+
+Voir: [[État indépendant du Congo]]
+
+Dès les années 40, dans ce qui était alors le [[Congo belge]], deux tendances indépendantistes importantes se manifestaient dans la capitale [[Kinshasa|Léopoldville]] : celle des « gens d'en bas » ([[Bas-Congo]] et [[Bandundu]]) parlant le [[kikongo]] et celle des « gens d'en haut » parlant le [[lingala]], venant de l'[[Équateur (province)|Équateur]] d'abord et finalement de tout l'intérieur du pays. Dans la première catégorie se forma en [[1949]] une association d'abord culturelle et finalement politique, l'[[ABAKO]], dont [[Joseph Kasavubu]] devint président en [[1954]]. Son rêve devint de rétablir l'ancien royaume [[Kongo]] de l'époque [[Portugal|portugaise]], en fait celui des [[Bakongo]]. Cette tendance se durcit très vite et réclama bientôt l'indépendance immédiate tout en demeurant fédéraliste lorsqu'il s'agit plus tard de discuter le problème du reste du Congo. Les évolués « d'en haut », venant de régions plus diversifiées et séduits par le « plan de 30 ans pour l'émancipation de l'[[Afrique]] » du Professeur [[belgique|belge]] [[Van Bilsen]], publié en [[1956]], étaient aussi désireux de maintenir le grand Congo unitaire. Leur manifeste dans ce sens publié le [[1er juillet|1{{er}} juillet]] [[1956]] fut vigoureusement combattu par l'[[ABAKO]] dès son assemblée générale du [[23 août]] [[1956]]. Le plan de 30 ans est déclaré utopique : « la nationalisation des grandes compagnies vivrières et agricoles comme des parastataux est souhaitable. Puisque l'heure est venue, il faut accorder aujourd'hui même l'indépendance immédiate ! »
+La [[Belgique]], qui croyait à la progressivité de la transition vers l'[[indépendance]] organisa les premières [[élection]]s à l'échelon communal, limitées aux grandes villes en [[1957]]. L'ABAKO triompha inévitablement à Léopoldville et cela impressionna certains unitaristes, tel [[Patrice Lumumba]], un [[Tetela]] du [[Kasaï]], intelligent et idéaliste, qui ne tarda pas à fonder son propre « mouvement national congolais » [[MNC-Lumumba]], plus revendicatif que celui du [[MNC-Kalondji]], [[Kalondji]] étant aussi un Kasaïen unitariste. Ces jeunes rivalités politiques confrontées aux structures tribales compliquées du Congo allaient former un mélange détonant qui détruirait au bout de cinq années la première démocratie parlementaire congolaise. On ne peut que rappeler ici quelques épisodes saillants :
+* émeutes de [[Léopoldville]] (4 -7 janvier 1959) provoquées par l'interdiction tardive d'un meeting de l'ABAKO. Arrestation de Kasavubu le 12 janvier. Il sera libéré le 14 mars.	
+* Le 13 janvier, déclaration gouvernementale annonçant l'intention belge de réaliser rapidement l'indépendance du Congo unitaire. L'[[ABAKO]] rejette cette déclaration deux jours plus tard. 
+* La suite de l'année 1959 voit d'abord l'autorisation des partis congolais, suivie d'élections générales sur l'ensemble du  territoire congolais marquées par toutes sortes de manœuvres de ces partis dont se dégagèrent 3 pôles : un Cartel des nationalistes fédéralistes formés de 6 partis séparatistes ou autonomistes dont l'[[ABAKO]] et le [[MNC - Kalondj]]i, le pôle du [[MNC Lumumba]] et finalement celui de l'homme fort du Katanga, [[Moïse Tchombé]], conscient de la force économique  de sa région et de l'intérêt de s'entendre avec l'[[Union Minière]] (tout comme [[Kalondji]] vis-à-vis des exploitations de diamant au [[Kasaï]]).	
+* En [[1960]], ce sera la [[Table Ronde de Bruxelles]] (du [[20 janvier]] au [[20 février]]) où représentants [[République démocratique du Congo|congolais]] et [[Belgique|belge]]s fixèrent les étapes suivantes. En mai eurent lieu les [[élection législative|élections législatives]] et provinciales qui marquèrent de nouveaux clivages et alliances (scission de l'ABAKO) d'où résulta un compromis : [[Joseph Kasavubu]] fut élu Président par le Parlement, Lumumba étant Premier ministre.
+
+'''Zaïre''' fut entre [[1971]] et [[1999]] le nom porté par l'actuelle [[République démocratique du Congo]], ainsi que par sa monnaie et par le fleuve qui donne au pays son seul accès à l'océan Atlantique
+
+Le [[Congo belge]] devint indépendant en 1960 en tant que « République du Congo », sous le même nom que l'ancienne colonie française voisine du [[République du Congo|Congo]]. Le titre « République démocratique » fut adopté en 1966, mais les deux pays étaient généralement distingués par leur capitale, à savoir Congo ([[Léopoldville]]) et Congo ([[Brazzaville]]). 
+
+Dans les années qui suivirent la prise du pouvoir en [[1965]] par le général [[Joseph-Désiré Mobutu]], ce dernier entama une campagne d'« [[authenticité]] ». Le pays fut renommé « République du Zaïre », d'après un mot local pour ''rivière'', le général Mobutu devint [[Mobutu Sese Seko]] et obligea tous ses concitoyens à adopter des noms africains, une nouvelle [[monnaie]] - le [[zaïre (monnaie)|zaïre]] divisé en 100 makuta (singulier [[likuta]]) - remplaça le [[franc]] et de nombreuses villes furent rebaptisées :
+{|
+!Ancien nom!!Nom congolais
+|-
+|Léopoldville ||[[Kinshasa]]
+|-
+|Stanleyville ||[[Kisangani]]
+|-
+|Élisabethville ||[[Lubumbashi]]
+|-
+| Jadotville || [[Likasi]]
+|-
+| Albertville || [[Kalemie]]
+|-
+| Cocquilhatville || [[Mbandaka]]
+|-
+| Costermansville || [[Bukavu]]
+|-
+| Bakwanga || [[Mbuji-Mayi]]
+|-
+| Luluabourg || [[Kananga]]
+|-
+| Nouvelle Anvers || [[Makanza]]
+|-
+| Port Francqui || [[Ilebo]]
+|-
+| Banningville || [[Bandundu]]
+|-
+| Paulis || [[Isiro]]
+|-
+| Thysville || [[Mbanza-Ngungu]]
+|-
+| Leverville || [[Lusanga]]
+|-
+| Baudoinville || [[Moba]] 
+|-
+| Ponthierville || [[Ubundu]]
+|-
+| Banzyville || [[Mobayi-Mbongo]]
+|-
+| Élisabetha || [[Lukutu ]]  
+|-
+| Charlesville || [[Djokupunda]]
+|}
+
+
+Après le renversement de Mobutu par [[Laurent-Désiré Kabila]] en [[1999]] lors de la [[Première guerre du Congo]], le pays retrouva son nom de [[République démocratique du Congo]].
+
+Le [[code pays]] (nom de domaine Internet), ''ZR'', est obsolète (la République démocratique du Congo a pour code pays ''CD'').
+
+Il est à remarquer que, afin de se démarquer de la culture [[colonialisme|coloniale]], Mobutu promulga l'[[abacost]] qui fut en vigueur entre [[1972]] et [[1990]].
+
+Actuellement l'armée française maintient la présence de militaires français dans le cadre de [[MONUC]]. Mais les violences continuent et la guerre aurait fait 3.8 millions de morts (chiffres d'un responsable congolais commentant un rapport de la commission des droits de l'Homme de l'ONU, 2003 : [http://www.un.org/News/fr-press/docs/2003/DHG199.doc.htm])
+
+== Politique ==
+''Article détaillé : [[Politique de la République démocratique du Congo]]''
+
+Présidents :
+* [[1960]] - [[1965]] [[Joseph Kasavubu]]
+* [[1965]] - [[1997]] [[Mobutu Sese Seko]]
+* [[1997]] - [[2001]] [[Laurent-Désiré Kabila]]
+* [[2001]] - auj. [[Joseph Kabila]]
+
+Premiers ministres :
+* [[1960]] - 1960     [[Patrice Lumumba]]
+* [[1961]] - 1961     [[Joseph Iléo]]
+* [[1961]] - [[1964]] [[Cyrille Adoula]]
+* [[1964]] - [[1965]] [[Moïse Tshombe]]
+* [[1965]] - 1965     [[Evariste Kimba]]
+* [[1965]] - [[1966]] [[Léonard Mulamba]]
+* 1966     - 1977     ?
+* [[1977]] - [[1979]] [[Mpinga Kasenga]]
+* [[1979]] - [[1980]] [[Bo-Boliko Lokonga Mihambo]]
+* [[1980]] - [[1981]] [[Jean Nguza Karl-I-Bond]]
+* [[1981]] - [[1982]] [[Joseph Untube N'singa Udjuu]]
+* [[1982]] - [[1986]] [[Kengo Wa Dondo]]
+* [[1987]] - [[1988]] [[Mabi Mulumba]]
+* [[1988]] - 1988     [[Sambwa Pida Nbagui]]
+* [[1988]] - [[1990]] [[Kengo wa Dondo]]
+* [[1990]] - [[1991]] [[Lunda Bululu]]
+* [[1991]] - 1991     [[Mulumba Lukoji]]
+* [[1991]] - 1991     [[Étienne Tshisekedi]]
+* [[1991]] - 1991     [[Bernardin Mungul Diaka]]
+* [[1991]] - [[1992]] [[Jean Nguza Karl-I-Bond]]
+* [[1992]] - [[1993]] [[Étienne Tshisekedi]]
+* [[1993]] - [[1994]] [[Faustin Birindwa]]
+* [[1994]] - [[1997]] [[Kengo Wa Dondo]]
+* [[1997]] - 1997     [[Étienne Tshisekedi]]
+* [[1997]] - 1997     [[Likulia Bolongo]]
+
+== Provinces ==
+''Article détaillé : [[Provinces de la République démocratique du Congo]]''
+
+{|align=center style="text-align:center"
+|
+# [[Bandundu]]
+# [[Bas-Congo]]
+# [[Équateur (province)|Équateur]]
+# [[Kasaï-Occidental]]
+# [[Kasaï-Oriental]]
+# [[Katanga]]
+# [[Kinshasa]]
+# [[Maniema]]
+# [[Nord-Kivu]]
+# [[Orientale]]
+# [[Sud-Kivu]]
+| [[Image:DCongoNumbered.png|thumb|250px]]
+|}
+
+== Géographie ==
+[[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Cartes des principales langues Bantoues en République démocratique du Congo]]
+
+''Article détaillé : [[Géographie de la République démocratique du Congo]]''
+* Voir aussi : [[Forêt du Bassin du Congo]] | [[Liste des villes de la République démocratique du Congo]]
+
+== Économie ==
+''Article détaillé : [[Économie de la République démocratique du Congo]]''
+
+''Voir aussi : [[Coltan]]''
+
+== Démographie ==
+''Article détaillé : [[Démographie de la République démocratique du Congo]]''
+
+
+[[Image:Congo dem demographie.png|thumb|650px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
+
+
+== Culture ==
+''Article détaillé : [[Culture de la République démocratique du Congo]]''
+
+{{entête tableau charte}}
+|+ '''Fêtes et jours fériés'''
+! Date !! {{nwt|Nom français}} !! {{nwt|Nom local}} !! Remarques
+|-
+| [[4 janvier]] || journée des Martyrs de l'indépendance || ||
+|- {{ligne grise}}
+| [[17 janvier]] ||journée du Héros National et de ses compagnons d'infortune || ||
+|-----
+| [[30 juin]] || date anniversaire de l'indépendance || ||
+|- {{ligne grise}}
+| [[16 février]] || journée des Martyrs de la Démocratie || ||
+|-----
+| [[17 mai]] || date anniversaire de la libération du Peuple de la tyrannie || ||
+|}
+
+== Divers ==
+
+*[[République démocratique du Congo, données chiffrées|Données chiffrées]]
+*[[Forces française hors de la métropole]]
+
+==Voir aussi==
+{{Commons|Category:Democratic Republic of the Congo|la République démocratique du Congo}}
+* [[Pays du monde]]
+* [[Afrique]]
+* [[Santé en République démocratique du Congo]]
+* [[Category:Afrika]] 
+* [[Category:Bisé ya Afrika]] 
+* [[Category:Bisé]]
+<br clear="all"/>
+
+== [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] ==
+{{wikitravel|la République démocratique du Congo|République_démocratique_du_Congo}}
+* [http://www.stiopka.com/congoclic/congoclic.html Carte du Congo (1958)]
+* [http://www.amnestyinternational.be/doc/rubrique44.html Informations d'Amnesty International]
+* [http://www.rdc.cd/ Site du Gouvernement]
+* [http://www.chez.com/rdcembassy/ Site de l'ambassade à Bruxelles]
+* [http://www.minfinrdc.cd/ Site du Ministère des Finances]
+* [http://www.bcc.cd/ Site de la Banque Centrale du Congo]
+* [http://www.minisanterdc.cd/ Site du Ministère de la santé]
+* [http://www.miningcongo.cd/ Site du Ministère des mines]
+* [http://www.ccre.cd/ Site du Comité de Coordination des Ressources Extérieures]
+* [http://www.ucoprdc.org/ Site de l'Unité de coordination du Projet]
+<br clear="all"/>
+{{Pays d'Afrique}}
+
 
 [[bn:&#2453;&#2457;&#2509;&#2455;&#2507; (&#2460;&#2494;&#2479;&#2492;&#2494;&#2480;)]]
 [[da:Demokratiske Republik Congo]]
