--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -55,59 +55,6 @@ Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama 
 
 [[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
 
-== Démographie ==
-[[Image:Congo dem demographie.png|thumb|650px|left|Évolution de la démographie entre 1961 et 2002 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2004). Population en milliers d'habitants.]]
-
-<br clear=all />
-
-== Subdivisions ==
-[[Image:DCongoNumbered.png|thumb|300px|right]]
-''Article de fond : [[Subdivisions de la République démocratique du Congo]]''
-
-# [[Bandundu]]
-# [[Bas-Congo]]
-# [[Équateur (province)|Équateur]]
-# [[Kasai-Occidental]]
-# [[Kasai-Oriental]]
-# [[Katanga]]
-# [[Kinshasa]]
-# [[Maniema]]
-# [[Nord-Kivu]]
-# [[Orientale]]
-# [[Sud-Kivu]]
-
-== Bikela ==
-
-Ekolo Kongo Demokratiki ekenda sango mokili mobimba mpona biloko bya mabele mwaye. Ya solo ekolo moko lisusu te na Afrika akokani naye na banyama mpe zamba ndenge na ndenge.
-
-=== Zamba na banyama : bobateli bwa bikela o kati ya zamba ya leta ===
-
-Banganga mayele batangi ndenge 11000 ya banzete, 409 ya banyama ya mabele, 1086 ya bandeke, 1069 ya mbisi mpe 152 ya banyoka. Bokozwa te na ekolo esusu ya Afrika banzete mpe banyama etangami ndenge na ndenge.
-* Na ekolo Kongo, bokozwa bangomba, bisobe, bibale, babweta na bangomba moto; bokozwa mpe zamba ndenge mingi lokola zamba ya mokili mwa molunge, nzete ya bozangi mai, bisobe mpe bikombo.
-* Banyama ya seko baye bavandaka nse wana, lokola mondonga, bonobo, lokulokoko lwa Kongo, mpe gambala ya mai. Soki tobebisi zamba na bango, bakolimwa elongo.
-
-=== Bikela bikopesa biloko bya kobongola ===
-Mbongo ekotisa ba nzete mpe mabanga ya talo ezali na esika enene na kati ya ekolo Kongo.
-
-* Mabele o ekolo Kongo etondi mabanga ya talo lokola wolo, kobalti, etani, koltani, jemanyu, diama, mbongo, mbengi, etc.
-
-Na tango ya kala, mabanga masusu mazalaki na tina te. Lelo tina na bango tembe nye. Lokola koltani ebwakamaki lokola bosoto bwa etani. Lelo, mosala ya elektroniki esengi tantalu, mpe na mikolo mya lelo, balokotaka bandambo ya etani mpona kobongola.
-
-Aluminyu na mbengi ezwamaka na bandambo ya mituka mpe biloko bya mwinda. Na mboka minene, ba fondele basalaka biloko ya bosalisi, kasi tango mosusu, biloko ya kotala elengi. Mpona mipaya, bakosala biloko na singa ya aluminyu, soki mpe na mbengi ; mpona bana mike, bakosala biloko ya esano.
-
-Nzete ezali na lisalisi linene na kati ya mboka, lokola nkoni, ekoki mpe kobongwama, bakoteka ye mpe na mboka mopaya. Nzete ya ekolo esengami mingi mpona mosala ya libaya, nzete ya mwindo mpona biloko ya ndako, mabaya ya kotika na mabele, mpe mabaya ya mbongwana enene.
-
-=== Bikela bikopesa bilei mpe nkisi ===
-Bikela bipesi banyama, bankasa mpe banzete ya kosalisa bokono ndenge na ndenge. Bisaleli bina ya mikolo na mikolo elakisi mayele mwa bato.
-
-Soki tolongoli bokila na ndobo, bato ya mboka balokota na zamba bambuma, banzenze, mayebo, nzoi mpe bakotekisa na nzela soki mpe na zando.
-
-Na mboka misusu mbiye ekopesa moto bokasi na 40%.
-
-'''Bikela esali mpe lokola ndako ya minganga.'''
-* Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
-* Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
-
 == Histoire ==
 ''Article détaillé : [[Histoire de la République démocratique du Congo]]''
 
@@ -178,6 +125,62 @@ Il est à remarquer que, afin de se démarquer de la culture [[colonialisme|colo
 
 Actuellement l'armée française maintient la présence de militaires français dans le cadre de [[MONUC]]. Mais les violences continuent et la guerre aurait fait 3.8 millions de morts (chiffres d'un responsable congolais commentant un rapport de la commission des droits de l'Homme de l'ONU, 2003 : [http://www.un.org/News/fr-press/docs/2003/DHG199.doc.htm])
 
+== Démographie ==
+''Article détaillé : [[fr:Démographie de la République démocratique du Congo]]''
+
+
+[[Image:Congo dem demographie.png|thumb|650px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
+
+<br clear=all />
+
+== Subdivisions ==
+[[Image:DCongoNumbered.png|thumb|300px|right]]
+''Article de fond : [[Subdivisions de la République démocratique du Congo]]''
+
+# [[Bandundu]]
+# [[Bas-Congo]]
+# [[Équateur (province)|Équateur]]
+# [[Kasai-Occidental]]
+# [[Kasai-Oriental]]
+# [[Katanga]]
+# [[Kinshasa]]
+# [[Maniema]]
+# [[Nord-Kivu]]
+# [[Orientale]]
+# [[Sud-Kivu]]
+
+== Bikela ==
+
+Ekolo Kongo Demokratiki ekenda sango mokili mobimba mpona biloko bya mabele mwaye. Ya solo ekolo moko lisusu te na Afrika akokani naye na banyama mpe zamba ndenge na ndenge.
+
+=== Zamba na banyama : bobateli bwa bikela o kati ya zamba ya leta ===
+
+Banganga mayele batangi ndenge 11000 ya banzete, 409 ya banyama ya mabele, 1086 ya bandeke, 1069 ya mbisi mpe 152 ya banyoka. Bokozwa te na ekolo esusu ya Afrika banzete mpe banyama etangami ndenge na ndenge.
+* Na ekolo Kongo, bokozwa bangomba, bisobe, bibale, babweta na bangomba moto; bokozwa mpe zamba ndenge mingi lokola zamba ya mokili mwa molunge, nzete ya bozangi mai, bisobe mpe bikombo.
+* Banyama ya seko baye bavandaka nse wana, lokola mondonga, bonobo, lokulokoko lwa Kongo, mpe gambala ya mai. Soki tobebisi zamba na bango, bakolimwa elongo.
+
+=== Bikela bikopesa biloko bya kobongola ===
+Mbongo ekotisa ba nzete mpe mabanga ya talo ezali na esika enene na kati ya ekolo Kongo.
+
+* Mabele o ekolo Kongo etondi mabanga ya talo lokola wolo, kobalti, etani, koltani, jemanyu, diama, mbongo, mbengi, etc.
+
+Na tango ya kala, mabanga masusu mazalaki na tina te. Lelo tina na bango tembe nye. Lokola koltani ebwakamaki lokola bosoto bwa etani. Lelo, mosala ya elektroniki esengi tantalu, mpe na mikolo mya lelo, balokotaka bandambo ya etani mpona kobongola.
+
+Aluminyu na mbengi ezwamaka na bandambo ya mituka mpe biloko bya mwinda. Na mboka minene, ba fondele basalaka biloko ya bosalisi, kasi tango mosusu, biloko ya kotala elengi. Mpona mipaya, bakosala biloko na singa ya aluminyu, soki mpe na mbengi ; mpona bana mike, bakosala biloko ya esano.
+
+Nzete ezali na lisalisi linene na kati ya mboka, lokola nkoni, ekoki mpe kobongwama, bakoteka ye mpe na mboka mopaya. Nzete ya ekolo esengami mingi mpona mosala ya libaya, nzete ya mwindo mpona biloko ya ndako, mabaya ya kotika na mabele, mpe mabaya ya mbongwana enene.
+
+=== Bikela bikopesa bilei mpe nkisi ===
+Bikela bipesi banyama, bankasa mpe banzete ya kosalisa bokono ndenge na ndenge. Bisaleli bina ya mikolo na mikolo elakisi mayele mwa bato.
+
+Soki tolongoli bokila na ndobo, bato ya mboka balokota na zamba bambuma, banzenze, mayebo, nzoi mpe bakotekisa na nzela soki mpe na zando.
+
+Na mboka misusu mbiye ekopesa moto bokasi na 40%.
+
+'''Bikela esali mpe lokola ndako ya minganga.'''
+* Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
+* Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
+
 == Politique ==
 ''Article détaillé : [[Politique de la République démocratique du Congo]]''
 
@@ -243,13 +246,6 @@ Premiers ministres :
 ''Article détaillé : [[Économie de la République démocratique du Congo]]''
 
 ''Voir aussi : [[Coltan]]''
-
-== Démographie ==
-''Article détaillé : [[Démographie de la République démocratique du Congo]]''
-
-
-[[Image:Congo dem demographie.png|thumb|650px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
-
 
 == Culture ==
 ''Article détaillé : [[Culture de la République démocratique du Congo]]''
