--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -133,19 +133,19 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Subdivisions ==
+== Biteni bya Ekolo Kongo Demokratiki ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Article de fond : [[Subdivisions de la République démocratique du Congo]]''
+''Article de fond : [[Biteni bya Kongo Kinshasa]]''
 
 # [[Bandundu]]
-# [[Bas-Congo]]
+# [[Bas-Congo]])
 # [[Équateur (province)|Équateur]]
 # [[Kasai-Occidental]]
 # [[Kasai-Oriental]]
 # [[Katanga]]
-# [[Kinshasa]]
+# [[Kinsasa]]
 # [[Maniema]]
-# [[Nord-Kivu]]
+# [[Nor-Kivu]]
 # [[Orientale]]
 # [[Sud-Kivu]]
 
