--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''Ekolo Kongo Demokratiki'''</font>
+|+ <font size="+1">'''Repubiliki ya Kongo Demokratiki<br>(Kongo-Kinshasa)<br>Republique Democratique du Congo'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
