*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''[[Repubiliki ya Kɔ́ngɔ Demokratiki]]<br>(Kongo-Kinshasa)<br>Republique Democratique du Congo'''</font>
+|+ <font size="+1">'''[[Repubiliki ya Kɔ́ngɔ Demokratiki]]<br>(Kɔ́ngɔ-Kinshasa)<br>Republique Democratique du Congo'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
