/* Biteni bya Ekolo Kongo Demokratiki */

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -140,10 +140,10 @@ Actuellement l'armée française maintient la présence de militaires français 
 # [[Bandundu]]
 # [[Bas-Congo]])
 # [[Équateur (province)|Équateur]]
-# [[Kasai-Occidental]]
-# [[Kasai-Oriental]]
+# [[Kasaï-Occidental]]
+# [[Kasaï-Oriental]]
 # [[Katanga]]
-# [[Kinsasa]]
+# [[Kinshasa]]
 # [[Maniema]]
 # [[Nor-Kivu]]
 # [[Orientale]]
