/* Biteni bya Ekolo Kongo Demokratiki */

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -145,7 +145,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 # [[Katanga]]
 # [[Kinshasa]]
 # [[Maniema]]
-# [[Nor-Kivu]]
+# [[Nord-Kivu]]
 # [[Orientale]]
 # [[Sud-Kivu]]
 
