*Empty MediaWiki Message*

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,3 +1,5 @@
-* [[Kɔ́ngɔ-Brazzaville]] (République du Congo, ex République populaire du Congo, ex Congo français)
-* [[Kɔ́ngɔ-Kinshasa]] (République Démocratique du Congo, ex Zaïre, ex Congo belge, ex État du Congo libre)
+* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, ex République populaire du Congo, ex Congo français)
+* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, ex Zaïre, ex Kongo belji, ex Ekolo ya Kongo ya Bonsomi)
 * [[Kɔ́ngɔ (ebale)]]
+
+{{Bokokani}}
