/* Biteni bya Ekolo Kongo Demokratiki */

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -138,7 +138,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 ''Article de fond : [[Biteni bya Kongo Kinshasa]]''
 
 # [[Bandundu]]
-# [[Bas-Congo]])
+# [[Bas-Congo]]
 # [[Équateur (province)|Équateur]]
 # [[Kasaï-Occidental]]
 # [[Kasaï-Oriental]]
