--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -133,7 +133,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Biteni bya Ekolo Kongo Demokratiki ==
+== Ba Provinsi bya Ekolo Kongo Demokratiki ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
 ''Article de fond : [[Biteni bya Kongo Kinshasa]]''
 
