/* Ba Provinsi bya Ekolo Kongo Demokratiki */

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -135,7 +135,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 == Ba Provinsi bya Ekolo Kongo Demokratiki ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Article de fond : [[Biteni bya Kongo Kinshasa]]''
+''Article de fond : [[Ba Provinsi bya Kongo Kinshasa]]''
 
 # [[Bandundu]]
 # [[Bas-Congo]]
