/* Ba Provinsi bya Repubiliki ya Kongo Demokratiki */

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -133,7 +133,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Ba Provinsi bya Repubiliki ya Kongo Demokratiki ==
+== Ba Provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
 ''Article de fond : [[Ba Provinsi bya Kongo Kinshasa]]''
 
