*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -18,7 +18,7 @@
 | Nkótá nationales  
 | [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
 |-----
-| [[Mboka-mokonzi]] || [[Kinshasa]]
+| [[Engumba-mokonzi]] || [[Kinshasa]]
 |-----
 | [[Kongo Demokratiki (Tata-mokonzi)|Mokambi-ekolo]] || [[Joseph Kabila]]
 |-----
