*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -9,7 +9,7 @@
 | align="center" width="140px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
-| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasia - Jistisi - Bosangani''</font>
+| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasi - Jistisi - Bosangani''</font>
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
@@ -29,7 +29,7 @@
 | [[Molɔngɔ́ ya bisé na bato|Classé 23]]<br /> 55 225 478 bato<br /> 24 hab./km²
 |-----
 | [[Bonsɔ́mí]]<br />&nbsp;- Date
-| ya [[Bɛ́ljika]]<br />[[30 juin]] [[1960]]
+| ya [[ Bɛ́lɛjika]]<br />[[30 juin]] [[1960]]
 |-----
 | [[Mfalánga]] || [[Franc Congolais]]
 |-----
