--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -181,8 +181,8 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
-== Politiki ==
-''Article détaillé : [[Politiki bya Repubiliki ya Kɔ́ngɔ Demokratiki]]''
+== Politiki bya Repubiliki ya Kɔ́ngɔ Demokratiki ==
+''Article détaillé : [[Politiki bya Kongo Kinshasa]]''
 
 Bakambi-Ekolo :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
