*Empty MediaWiki Message*

--- a/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Repubiliki_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -295,6 +295,7 @@ Bakambi-Bulamatari :
 <br clear="all"/>
 {{Pays d'Afrique}}
 
+[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[bn:&#2453;&#2457;&#2509;&#2455;&#2507; (&#2460;&#2494;&#2479;&#2492;&#2494;&#2480;)]]
 [[da:Demokratiske Republik Congo]]
